# Open_Duck_Mini

./: .gitignore  FUNDING.yml  README.md  TODO.md  V2_ROADMAP.md  example_robot.xml  example_scene.xml  requirements.txt  rpi_setup.md  setup.cfg  thanks.md
docs/: feetech_identification.md  head_schematic.xcf  open_duck_mini_v2_wiring_diagram.drawio  prepare_robot.md
examples/: config.json  example_robot.xml
experiments/: bdx_jump.py
experiments/LeRobot/: README.md  new_record_episodes_hdf5_NOT_WORKING.py  record_episodes_hdf5.py
experiments/RL/: env.py  env_humanoid.py  old_test.py  play_policy.py  pretrain.py  pretrain_bc.py  pretrain_dbrm.py  pretrain_gail.py  record_episodes.py  record_episodes_hdf5.py  replay_episodes.py  test.py  train.py  view_hdf5.py
experiments/anti_gravity_leg/: anti_gravity.py
experiments/identification/: check_speed.py  get_data.py  plot_action_obs.py  plot_obs.py  plot_sample.py  plot_speeds.py  utils.py
experiments/mujoco/: BAM_onnx_AMP_for_hardware_mujoco.py  dofs.py  mujoco_placo_walk_engine_demo.py  mujoco_record_amp.py  mujoco_walk_engine.py  onnx_AMP_for_hardware_mujoco.py  onnx_AMP_mujoco.py  onnx_AMP_mujoco_old.py  params_m1.json  params_m2.json  params_m3.json  params_m6.json  plot.py  plot_latent.py  scene_test.xml  sim2sim_example.py  test.py  test2.py
experiments/placo/: .gitignore  auto_placo_record_amp.py  bdx_walk.py  generate_orientations_amp.py  placo_record_amp.py  placo_record_amp_moves.py  placo_walk_engine_mujoco.py  placo_walk_engine_test.py  replay_amp.py  test.py  test_bdx.py  test_placo_hwi_tmp.py  tmp_replay_amp.py  walk_engine_test.py
experiments/real_robot/: bdx_walk.py  bdx_walk_mujoco.py  imu.py  imu_gyro.py  imu_gyro_vel.py  imu_quat.py  move_test.py  new_run.py  plot.py  plot_imu.py  plot_traj.py  pressure_test.py  raw_imu_gyro.py  replay_imu_data.py  rl_walk.py  run.py  test.py  utils.py
gym/: bd1_env.py  test.py  test_bd1.py  train_bd1.py
mujoco/: dofs.py  visu.py  walk.py
placo/: test.py
print/: README.md  body - body_part.stl  body - cage_back.stl  body - cage_bottom.stl  body - cage_top.stl  body - front_cover.stl  body - holder_U2D2_power_hub.stl  body - spacer.stl  dummy_horn.stl  foot - foot.stl  foot.stl  foot_contact.stl  head - head.stl  head - head_roll_pitch.stl  leg_block_to_axis.stl  leg_double_U.stl  leg_hip_right_roll_to_pitch.stl  leg_parts - axis_to_axis.stl  leg_parts - block_to_axis.stl  leg_parts - double_U.stl  leg_parts - hip_left_roll_to_pitch.stl  leg_parts - renfort_head_link.stl  leg_parts - renfort_leg.stl
robot_setup/: change_id.py  io_330.py  test.py
(+269 files in other folders)
