[metadata]
name = pollen-vision
version = 2.0.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/pollen-vision
description = Repository containing all software related to computer vision at Pollen
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =pollen_vision
install_requires =
    numpy==1.25.1
    opencv-contrib-python==4.8.0.74
    openai==1.12.0

[options.packages.find]
where=pollen_vision

[options.package_data]
robots =
    *.part
    *.stl
    *.urdf
    *.xml

[options.extras_require]

[options.entry_points]
console_scripts = 
