[metadata]
name = mini-bdx
version = 0.0.1
author = Antoine Pirrone
author_email = antoine.pirrone@gmail.com
url = https://github.com/apirrone/mini_BDX
description = Making a mini version of the BDX droid
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =mini_bdx
install_requires =
[options.packages.find]
where=mini_bdx

[options.package_data]

[options.extras_require]
all =
    mujoco==3.1.5
    mujoco-python-viewer==0.1.4
    onshape-to-robot==0.3.25
    gymnasium[mujoco] == 0.29.1
    stable-baselines3[extra]==2.3.2
    sb3_contrib==2.3.0
    placo==0.5.0
    FramesViewer
    inputs==0.5
    imitation==1.0.0
    h5py==3.11.0
robot = placo==0.5.0
        pypot @ git+https://github.com/apirrone/pypot@support_4B_registers

[options.entry_points]
console_scripts = 
